Bug 1263503 - memory leak of filename into layout/printing/nsPrintEngine.cpp. r=mantaroh

"fileNameStr = fileName;" will be fileNameStr.Assign(fileName), so this causes small memory leak.  We should use Adopt, getter_copies, or AString parameter instead.

MozReview-Commit-ID: 5VTgttj2LdK