layout/printing/nsPrintEngine.cpp
@@ -1847,9 +1847,7 @@ nsPrintEngine::SetupToPrintContent()
   printData->mPrintSettings->GetPrintToFile(&isPrintToFile);
   if (isPrintToFile) {
     // On some platforms The BeginDocument needs to know the name of the file.
-    char16_t* fileName = nullptr;
-    printData->mPrintSettings->GetToFileName(&fileName);
-    fileNameStr = fileName;
+    printData->mPrintSettings->GetToFileName(getter_Copies(fileNameStr));
   }
 
   nsAutoString docTitleStr;
